--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   device_preview: ^1.2.0
   google_fonts: ^6.2.1
+  auto_size_text: ^3.0.0
+  firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.3
+  firebase_core: ^3.11.0
+  shared_preferences: ^2.5.1
+  
 
 dev_dependencies:
   flutter_test:
